<?xml version="1.0"?>
<package>

  <name>bio_ik_msgs</name>
  <version>0.0.0</version>

  <description>ROS messages for transmitting BioIK goals</description>

  <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>moveit_msgs</build_depend>
  <run_depend>moveit_msgs</run_depend>

  <export>
  </export>

</package>
