<?xml version="1.0"?>
<package>

    <name>bio_ik_service_examples</name>
    <version>0.0.0</version>

    <description>Example scripts for the BioIK service</description>

    <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <run_depend>rospy</run_depend>

    <build_depend>bio_ik_msgs</build_depend>
    <run_depend>bio_ik_msgs</run_depend>

    <run_depend>bio_ik_service</run_depend>

    <export>
    </export>

</package>
